--- a/index.html
+++ b/index.html
@@ -1,1 +1,452 @@
-Sanxie 
+﻿<html>
+ 
+<head>
+<meta http-equiv="Content-Language" content="zh-cn">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>三協株式会社</title>
+<!--<link rel="shortcut icon" href="./Images/YfcLogo-HP.ico" />-->
+<link rel="shortcut icon" href="./Images/newlogo11.jpg" />
+<style type="text/css"> 
+body,td,th {
+	font-size: 10pt;font-family: "ＭＳ 明朝";
+}
+body {
+	margin-left: 0px;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+}
+a:link {
+	text-decoration: none;
+}
+a:visited {
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
+}
+a:active {
+	text-decoration: none;
+}
+</style>
+</head>
+ 
+<body>
+ 
+<table border="0" width="100%" cellspacing="0" cellpadding="0" height="943">
+	<tr>
+		<td height="99" style="border-top: 1px solid #FFFFFF">&nbsp;</td>
+		<td height="99" width="980" style="border-top: 1px solid #FFFFFF">
+		<table border="0" width="100%" cellspacing="0" cellpadding="0" height="100%">
+			<tr>
+				<td valign="top" width="650">
+<!--
+				<img border="0" src="./Images/logo.jpg" width="424" height="96"></td>
+				<img border="0" src="./Images/newlogo2.jpg" width="356" height="96">
+				<img border="0" src="./Images/newlogo3.jpg" width="522" height="96">
+				<img border="0" src="./Images/newlogo4.jpg" width="508" height="96">
+-->
+				<img border="0" src="./Images/newlogo2.jpg" width="424" height="96"></td>
+				<td>
+						<table border="0" width="100%" height="100%">
+							<tr>
+								<td valign="top" height="45">
+								<table border="0" width="100%" height="27">
+									<tr>
+										<td align="left">
+										<p align="center">
+										<!-- <img border="0" src="Images/bg_006.gif" width="11" height="10"> --></td>
+										<td align="left">
+										<span lang="JA" style="font-family: MS Mincho">
+										<font style="font-size: 9pt" color="#666666">
+										<a href="../CWEB/index.html">
+										<font color="#666666"><!-- 中国語 -->&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></font></span></td>
+										<td align="left">
+										<p align="center">
+										<!-- <img border="0" src="Images/bg_006.gif" width="11" height="10"> --></td>
+										<td align="left" width="45">
+										<span lang="JA" style="font-family: MS Mincho">
+										<font style="font-size: 9pt" color="#666666">
+										<a href="index.html">
+										<font color="#666666"><!-- 日本語 -->&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></font></span></td>
+										<td align="left" valign="middle" width="15">
+										<p align="center">
+										<img border="0" src="Images/bg_007.gif" width="15" height="13"></td>
+										<td align="left">
+										<span lang="JA" style="font-family: MS Mincho">
+										<font style="font-size: 9pt" color="#666666"><span title="みんなの未来株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','みんなの未来株式会社')">お気に入り</font></span></td>
+										<td align="left">
+										<p align="center">
+										<img border="0" src="Images/bg_005.gif" width="13" height="9"></td>
+										<td align="left">
+										<span lang="JA" style="font-family: MS Mincho">
+										<font style="font-size: 9pt" color="#666666">
+										<a href="mailto:eigyou@yourfuture.jp">
+										<font color="#666666">お問い合わせ</font></a></font></span></td>
+									</tr>
+								</table>
+								</td>
+							</tr>
+							<tr>
+								<td valign="top">
+						&nbsp;</td>
+							</tr>
+						</table>
+						</td>
+			</tr>
+		</table>
+		</td>
+		<td height="99" style="border-top: 1px solid #FFFFFF">&nbsp;</td>
+	</tr>
+	<tr>
+		<td height="28" style="border-top: 1px solid #EBEBEB; ; border-left-width:1px; border-right-width:1px; border-bottom-width:1px" ><!-- background="./Images/bg_001.gif" -->&nbsp;</td>
+		<td width="980" height="28" style="border-top: 1px solid #EBEBEB; ; border-left-width:1px; border-right-width:1px; border-bottom-width:1px" background="./Images/bg_001.gif">
+		<table border="0" width="100%" cellspacing="0" cellpadding="0" height="100%">
+			<tr>
+				<td>
+				<img border="0" src="./Images/bg_002_1.jpg" width="130" height="28"></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="shjs.html"><img src="./Images/bg_003.jpg" onmouseover="src='./Images/bg_003_1.jpg';" onmouseout="src='./Images/bg_003.jpg'" border="0" /></a></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="jyln.html"><img src="./Images/bg_004.jpg" onmouseover="src='./Images/bg_004_1.jpg';" onmouseout="src='./Images/bg_004.jpg'" border="0" /></a></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="yg.html"><img src="./Images/bg_005.jpg" onmouseover="src='./Images/bg_005_1.jpg';" onmouseout="src='./Images/bg_005.jpg'" border="0" /></a></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="akcs.html"><img src="./Images/bg_006.jpg" onmouseover="src='./Images/bg_006_1.jpg';" onmouseout="src='./Images/bg_006.jpg'" border="0" /></a></td><!--
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="bnmj.html"><img src="./Images/bg_007.jpg" onmouseover="src='./Images/bg_007_1.jpg';" onmouseout="src='./Images/bg_007.jpg'" border="0" /></a></td>-->
+				<td width="1">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="grqb.html"><img src="./Images/bg_008.jpg" onmouseover="src='./Images/bg_008_1.jpg';" onmouseout="src='./Images/bg_008.jpg'" border="0" /></a></td>
+			</tr>
+		</table>
+		</td>
+		<td height="28" style="border-top: 1px solid #EBEBEB; ; border-left-width:1px; border-right-width:1px; border-bottom-width:1px" ><!-- background="./Images/bg_001.gif" -->&nbsp;</td>
+	</tr>
+	<tr>
+		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
+		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top">
+		<object classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000" id="obj1" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" border="0" width="980" height="260">
+			<param name="movie" value="Flash/banner.swf">
+			<param name="quality" value="High">
+			<embed src="Flash/banner.swf" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" name="obj1" width="980" height="260" quality="High"></object>
+		</td>
+		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
+	</tr>
+	<tr>
+		<td style="border-top: 1px solid #FFFFFF">&nbsp;</td>
+		<td width="980" style="border-bottom:2px solid #FFFFFF; border-top:1px solid #FFFFFF; " valign="top">
+		<table border="0" width="100%" height="100%">
+			<tr>
+				<td bgcolor="#DFE3E8" valign="top" width="210" style="border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom: 1px solid #FFFFFF">
+				<table border="0" width="100%" cellspacing="0" cellpadding="0">
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<img border="0" src="./Images/bg_010.jpg" width="210" height="30"></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="shjs.html">
+						<img border="0" src="./Images/bg_011_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="jyln.html">
+						<img border="0" src="./Images/bg_012_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="yg.html">
+						<img border="0" src="./Images/bg_013_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="akcs.html">
+						<img border="0" src="./Images/bg_014_1.jpg" width="210" height="30"></a></td>
+					</tr>
+<!--
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="bnmj.html">
+						<img border="0" src="./Images/bg_015_1.jpg" width="210" height="30"></a></td>
+					</tr>
+-->
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="grqb.html">
+						<img border="0" src="./Images/bg_016_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="zpxx.html">
+						<img border="0" src="Images/bg_021_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="https://webmail.rentalserver.jp/" target="blank">
+						<img border="0" src="Images/bg_022_1.jpg" width="210" height="30"></a></td>
+					</tr>
+<!--
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="gshd.html">
+						<img border="0" src="Images/bg_017_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="dzgg.html">
+						<img border="0" src="Images/bg_018_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="spxx.html">
+						<img border="0" src="Images/bg_019_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="synr.html">
+						<img border="0" src="Images/bg_020_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="ygrk.html">
+						<img border="0" src="Images/bg_022_1.jpg" width="210" height="30"></a></td>
+					</tr>
+					<tr>
+						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
+						<a href="lswm.htm">
+						<img border="0" src="Images/bg_023_1.jpg" width="210" height="30"></a></td>
+					</tr>
+-->
+				</table>
+				</td>
+				<td style="border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom: 1px solid #FFFFFF" valign="top">
+				<table border="0" width="100%" height="100%" style="border: 1px solid #B9C1CC">
+					<tr>
+						<td height="28" bgcolor="#DFE3E8">
+						<table border="0" width="100%" height="100%">
+							<tr>
+								<td width="16">
+								<img border="0" src="./Images/bg_004.gif" width="16" height="16"></td>
+								<td>&nbsp;<b>会社概要</b></td>
+							</tr>
+						</table>
+						</td>
+					</tr>
+					<tr>
+						<td valign="top" style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #B9C1CC; border-bottom-width: 1px">
+						<div align="center">
+&nbsp;<table border="0" height="295" width="659">
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　商　　号</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　三協株式会社（略称：SK）</td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　登録住所</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+<!--
+									　⇒住所移転予定：（2015年7月18日）<br>
+									　〒104-0061　東京都中央区銀座2丁目12番12号　たちばなやビル3階<O:P></O:P></td>
+									　⇒住所移転予定：（2015年7月18日）<br>
+									　〒116-0013　東京都荒川区西日暮里1丁目3番3-1304号<O:P></O:P><br><br>
+-->
+									　〒101-0032　東京都千代田区岩本町2-19-4　博朋ビル6階<O:P></O:P></td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　取締役会</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　代表者取締役：王綱<br>
+								</tr>
+<!--
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　新宿営業所</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　〒163-0222　東京都新宿区西新宿２－６－１　新宿住友ビル２２階<br>
+									　大連（日本）ソフトウェアパーク内<O:P></O:P></td>
+								</tr>
+-->
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　ＴＥＬ</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　０３－５８２９－９５１９</td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　ＦＡＸ</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　０３－５８２９－９８７２</td>
+								</tr>
+								<tr>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　<span lang="JA">資本金</span></td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　２５００万円</td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　<span lang="JA">設立</span></td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　<span lang="JA">２０１１年０１月</span></td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　<span lang="JA">取引銀行</span></td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　三菱東京ＵＦＪ銀行　築地支店<br>
+									　みずほ銀行　　　　　銀座支店</td>
+								</tr>
+								<tr>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　事業内容</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　・ソフトウェア請負開発及び販売業務<br>
+									　・IT関連技術者の派遣<br>
+									　・サイト構築・運用<br>
+									　・ネットワークシステム構築の受託<br>
+									　・通信販売事業<br>
+<!--
+									　　　<a href="http://www.future-watch.com/" target="blank">ネットショップ：未来時計(http://www.future-watch.com/)</a><br>
+<!--
+									　　　<a href="http://www.rakuten.co.jp/yourday/" target="blank">楽天ショップ：ウエディングドレス(http://www.rakuten.co.jp/yourday/)</a><br>
+-->
+									</td>
+								</tr>
+								<tr>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　主要取引先</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　・中央システム株式会社<br>
+									　・株式会社ラック<br>
+									　・Sky株式会社<br>
+									　・株式会社システムイオ<br>
+									　・株式会社ユニバーサルコンツェルン<br>
+									　・株式会社データフォーシーズ<br>
+									　・ソフトブレーン・オフショア株式会社<br>
+									　・株式会社ベインキャリージャパン<br>
+									　・株式会社フジミック新潟<br>
+									　・株式会社コシダテック<br>
+									　・株式会社共達ネットワーク<br>
+									　・株式会社ＮＴＴデータチャイナアウトソーシング<br>
+									　・株式会社華信コンピュータージャパン<br>
+									　・NEUSOFT Japan 株式会社<br>
+									　・株式会社Beyondsoft Japan<br>
+									　・株式会社イー・ビジネス<br>
+									　・株式会社イーティーアイ<br>
+								</tr>
+<!--
+								<tr>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　連携会社</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　・株式会社TDR<br>
+									　・株式会社ディー・トレンド・ジャパン<br>
+									　・株式会社天時情報システム<br>
+									　・株式会社ポリシャス<br>
+									　・株式会社Ｉ．Ｔフォース<br>
+									　・未来テック合同会社<br>
+									　・日発株式会社
+									　</td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　従業員</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　２５人</td>
+								</tr>
+-->
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　売上高</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+<!--
+									　２０１１年度：　１８，０００千円<br>
+									　２０１２年度：２８０，０００千円<br>
+									　２０１３年度：３４７，０００千円</td>
+									　２０１４年度：２．３億円<br>
+-->
+									　２０１５年度：４．８億円</td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　従業員</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　８０人(プロパー、契約社員）</td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　グループ会社</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　株式会社オーティーシー　　　　　　(<a href="http://www.otc.co.jp/" target="blank">http://www.otc.co.jp/</a>)<br>
+									　所在地 : 〒102-0072　東京都千代田区飯田橋1丁目7番10号 山京ビル本館804<br><br>
+									　トリオシステムズ株式会社　　　　　(<a href="http://www.triosys.co.jp/" target="blank">http://www.triosys.co.jp/</a>)<br>
+									　所在地 : 〒101-0047　東京都千代田区内神田1-5-6　小山第2ビル302号室<br></td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　グループ子会社</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　オーティーエフグループ株式会社　　(<a href="http://www.otfg.co.jp/" target="blank">http://www.otfg.co.jp/</a>)<br>
+									　所在地 : 〒102-0072　東京都千代田区飯田橋1丁目7番10号 山京ビル本館401</td>
+								</tr>
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　海外子会社</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
+									　大連創未科技有限公司<br>
+									　所在地 : 〒116023　中国・遼寧省大連市大連軟件園東路5号<br><br>
+									　西安未都ネット科技有限公司<br>
+									　所在地 : 〒710075　中国・西安市高新区灃恵南路18号シグマビル10201-224-24<br></td>
+								</tr>
+<!--
+								<tr height="20">
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　連携会社</td>
+									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
+									　ビズデータ株式会社<br>
+									　所在地 : 〒101-0032　東京都千代田区岩本町2-19-4　博朋ビル602室<br>
+									　ビズデータ株式会社<br>
+									　所在地 : 〒101-0032　東京都千代田区岩本町2-19-4　博朋ビル602室<br></td>
+								</tr>
+-->
+							</table>
+						</div>
+						</td>
+					</tr>
+				</table>
+				</td>
+			</tr>
+		</table>
+		</td>
+		<td style="border-top: 1px solid #FFFFFF">&nbsp;</td>
+	</tr>
+	<tr>
+		<td height="71">&nbsp;</td>
+		<td width="980" height="71">
+		<table border="0" width="100%" height="100%">
+			<tr>
+				<!-- <td width="212" style="font-size: 10pt">&nbsp;</td> -->
+				<td style="font-size: 10pt">
+				<p align="center" style="line-height: 200%">みんなの夢、みんなの未来、みんなが一緒に創造しましょう。<br>
+		Copyright (c) 2011 Your Future Corporation, Inc. All Rights Reserved.</td>
+			</tr>
+		</table>
+		</td>
+		<td height="71">&nbsp;</td>
+	</tr>
+</table>
+ 
+</body>
+ 
+</html>
+
