--- a/grqb.html
+++ b/grqb.html
@@ -67,7 +67,7 @@ a:active {
 										<img border="0" src="Images/bg_007.gif" width="15" height="13"></td>
 										<td align="left" style="font-size: 10pt">
 										<span lang="JA" style="font-family: MS Mincho">
-										<span title="みんなの未来株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','みんなの未来株式会社')">
+										<span title="三協株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','三協株式会社')">
 										<font style="font-size: 9pt" color="#666666">お気に入れ</font></span></td>
 										<td align="left" style="font-size: 10pt">
 										<p align="center">
@@ -137,10 +137,7 @@ a:active {
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top">
-		<object classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000" id="obj1" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" border="0" width="980" height="260">
-			<param name="movie" value="Flash/banner.swf">
-			<param name="quality" value="High">
-			<embed src="Flash/banner.swf" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" name="obj1" width="980" height="260" quality="High"></object>
+			<img src="./Images/company01.jpg" onmouseover="src='./Images/company01.jpg';" onmouseout="src='./Images/company01.jpg'" border="0" /></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 	</tr>
@@ -281,7 +278,7 @@ a:active {
 								弊社の個人情報の取り扱いに関するお問合せは、下記連絡先までご連絡くださいませ。<br>
 								<br>
 								<b>■ 連絡先</b><br>
-								みんなの未来株式会社<br>
+								三協株式会社<br>
 								〒101-0032　東京都千代田区岩本町2-19-4　博朋ビル6階<br>
 								TEL: 03-5829-9519<br>
 								FAX: 03-5829-9872</td>
@@ -303,8 +300,8 @@ a:active {
 			<tr>
 				<!-- <td width="212" style="font-size: 10pt">&nbsp;</td> -->
 				<td style="font-size: 10pt">
-				<p align="center" style="line-height: 200%">みんなの夢、みんなの未来、みんなが一緒に創造しましょう。<br>
-		Copyright (c) 2011 Your Future Corporation, Inc. All Rights Reserved.</td>
+				<p align="center" style="line-height: 200%">日々成長し続け、お客様に求められているものを提供し続けていきます。<br>
+		Copyright (c) 2016 SAN KYOU Corporation, Inc. All Rights Reserved.</td>
 			</tr>
 		</table>
 		</td>
