--- a/zpxx.html
+++ b/zpxx.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>みんなの未来株式会社</title>
+<title>三協株式会社</title>
 <style type="text/css"> 
 body,td,th {
 	font-size: 10pt;font-family: "ＭＳ 明朝";
@@ -67,7 +67,7 @@ a:active {
 										<img border="0" src="Images/bg_007.gif" width="15" height="13"></td>
 										<td align="left" style="font-size: 10pt">
 										<span lang="JA" style="font-family: MS Mincho">
-										<span title="みんなの未来株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','みんなの未来株式会社')">
+										<span title="三協株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','三協株式会社')">
 										<font style="font-size: 9pt" color="#666666">お気に入り</font></span></td>
 										<td align="left" style="font-size: 10pt">
 										<p align="center">
@@ -125,10 +125,7 @@ a:active {
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top">
-		<object classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000" id="obj1" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" border="0" width="980" height="260">
-			<param name="movie" value="Flash/banner.swf">
-			<param name="quality" value="High">
-			<embed src="Flash/banner.swf" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" name="obj1" width="980" height="260" quality="High"></object>
+			<img src="./Images/company01.jpg" onmouseover="src='./Images/company01.jpg';" onmouseout="src='./Images/company01.jpg'" border="0" /></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 	</tr>
@@ -281,7 +278,7 @@ a:active {
 								</tr>
 							</table>
 										<br><br>興味がある方は、弊社の<a href="doc/rireki-yfc.xls" >履歴書フォーマット</a>を記入して、<BR>
-										<a href="mailto:saiyo@yourfuture.jp">saiyo@yourfuture.jp</a>に履歴書を送付してください。<BR>
+										<a href="mailto:saiyo@yourfuture.jp">saiyo@sankyu.jp</a>に履歴書を送付してください。<BR>
 						</div>
 						</td>
 					</tr><!--
@@ -306,8 +303,8 @@ a:active {
 			<tr>
 				<!-- <td width="212" style="font-size: 10pt">&nbsp;</td> -->
 				<td style="font-size: 10pt">
-				<p align="center" style="line-height: 200%">みんなの夢、みんなの未来、みんなが一緒に創造しましょう。<br>
-		Copyright (c) 2011 Your Future Corporation, Inc. All Rights Reserved.</td>
+				<p align="center" style="line-height: 200%">日々成長し続け、お客様に求められているものを提供し続けていきます。<br>
+		Copyright (c) 2016 Your Future Corporation, Inc. All Rights Reserved.</td>
 			</tr>
 		</table>
 		</td>
