--- a/index.html
+++ b/index.html
@@ -130,11 +130,8 @@ a:active {
 	</tr>
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
-		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top">
-		<object classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000" id="obj1" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" border="0" width="980" height="260">
-			<param name="movie" value="Flash/banner.swf">
-			<param name="quality" value="High">
-			<embed src="Flash/banner.swf" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" name="obj1" width="980" height="260" quality="High"></object>
+		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top" align="center">
+			<img src="./Images/company01.jpg" onmouseover="src='./Images/company01.jpg';" onmouseout="src='./Images/company01.jpg'" border="0" /></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 	</tr>
@@ -258,7 +255,7 @@ a:active {
 									　⇒住所移転予定：（2015年7月18日）<br>
 									　〒116-0013　東京都荒川区西日暮里1丁目3番3-1304号<O:P></O:P><br><br>
 -->
-									　〒101-0032　東京都千代田区岩本町2-19-4　博朋ビル6階<O:P></O:P></td>
+									　〒271-0064　千葉県松戸市カ上本郷908-2 第三北松戸サンロードス2階<O:P></O:P></td>
 								</tr>
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
@@ -279,25 +276,25 @@ a:active {
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
 									　ＴＥＬ</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
-									　０３－５８２９－９５１９</td>
+									　０３－８８８８－８８８８</td>
 								</tr>
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　ＦＡＸ</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
-									　０３－５８２９－９８７２</td>
+									　０３－８８８８－８８８８</td>
 								</tr>
 								<tr>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
 									　<span lang="JA">資本金</span></td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
-									　２５００万円</td>
+									　５００万円</td>
 								</tr>
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　<span lang="JA">設立</span></td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
-									　<span lang="JA">２０１１年０１月</span></td>
+									　<span lang="JA">２０１６年０２月</span></td>
 								</tr>
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
@@ -322,7 +319,7 @@ a:active {
 -->
 									</td>
 								</tr>
-								<tr>
+<!--								<tr>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
 									　主要取引先</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
@@ -344,7 +341,7 @@ a:active {
 									　・株式会社イー・ビジネス<br>
 									　・株式会社イーティーアイ<br>
 								</tr>
-<!--
+
 								<tr>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　連携会社</td>
@@ -365,25 +362,25 @@ a:active {
 									　２５人</td>
 								</tr>
 -->
-								<tr height="20">
+<!--								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　売上高</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
-<!--
+
 									　２０１１年度：　１８，０００千円<br>
 									　２０１２年度：２８０，０００千円<br>
 									　２０１３年度：３４７，０００千円</td>
 									　２０１４年度：２．３億円<br>
--->
+
 									　２０１５年度：４．８億円</td>
 								</tr>
-								<tr height="20">
+-->								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
 									　従業員</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
-									　８０人(プロパー、契約社員）</td>
+									　１０人(プロパー、契約社員）</td>
 								</tr>
-								<tr height="20">
+<!--								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　グループ会社</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
@@ -407,7 +404,7 @@ a:active {
 									　所在地 : 〒116023　中国・遼寧省大連市大連軟件園東路5号<br><br>
 									　西安未都ネット科技有限公司<br>
 									　所在地 : 〒710075　中国・西安市高新区灃恵南路18号シグマビル10201-224-24<br></td>
-								</tr>
+-->								</tr>
 <!--
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
@@ -437,8 +434,8 @@ a:active {
 			<tr>
 				<!-- <td width="212" style="font-size: 10pt">&nbsp;</td> -->
 				<td style="font-size: 10pt">
-				<p align="center" style="line-height: 200%">みんなの夢、みんなの未来、みんなが一緒に創造しましょう。<br>
-		Copyright (c) 2011 Your Future Corporation, Inc. All Rights Reserved.</td>
+				<p align="center" style="line-height: 200%">日々成長し続け、お客様に求められているものを提供し続けていきます。<br>
+		Copyright (c) 2016 SAN KYOU Corporation, Inc. All Rights Reserved.</td>
 			</tr>
 		</table>
 		</td>
