--- a/yg.html
+++ b/yg.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>みんなの未来株式会社</title>
+<title>三協株式会社</title>
 <style type="text/css"> 
 body,td,th {
 	font-size: 10pt;font-family: "ＭＳ 明朝";
@@ -67,7 +67,7 @@ a:active {
 										<img border="0" src="Images/bg_007.gif" width="15" height="13"></td>
 										<td align="left" style="font-size: 10pt">
 										<span lang="JA" style="font-family: MS Mincho">
-										<span title="みんなの未来株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','みんなの未来株式会社')">
+										<span title="三協株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','三協株式会社')">
 										<font style="font-size: 9pt" color="#666666">お気に入れ</font></span></td>
 										<td align="left" style="font-size: 10pt">
 										<p align="center">
@@ -129,10 +129,7 @@ a:active {
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top">
-		<object classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000" id="obj1" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" border="0" width="980" height="260">
-			<param name="movie" value="Flash/banner.swf">
-			<param name="quality" value="High">
-			<embed src="Flash/banner.swf" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" name="obj1" width="980" height="260" quality="High"></object>
+			<img src="./Images/company01.jpg" onmouseover="src='./Images/company01.jpg';" onmouseout="src='./Images/company01.jpg'" border="0" /></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 	</tr>
@@ -243,55 +240,7 @@ a:active {
 						<table border="0" width="100%" cellspacing="8" height="100%">
 							<tr>
 								<td valign="top">
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2011</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">01</span>月 ：
-								東京都中央区にて設立（資本金：３００万円）</span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
- 
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2013</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">02</span>月 ：
-								平成２４年度決算は完了して、売上額は２．８億（IT、貿易含む）になりました。<!--詳細は、<a href="kessan/YFC2012決算書.pdf" target="_blank">「平成２４年度決算報告」</a>
-をご参照ください。--></span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
-<!--
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2014</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">01</span>月 ：
-								ビイズデーター・ジャパン株式会社とグループ会社にして、聯合経営になりました。</span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
--->
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2014</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">01</span>月 ：
-								オフィスは、西新宿の住友ビルに移転しました。</span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
- 
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2014</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">01</span>月 ：
-								資本金は、１０００万円に増資しました。</span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
- 
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2014</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">02</span>月 ：
-								平成２５年度決算は完了して、売上額は３．４７億（IT、貿易含む）になりました。<!--詳細は、<a href="kessan/YFC2013決算書.pdf" target="_blank">「平成２５年度決算報告」</a>
-をご参照ください。--></span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
- 
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2014</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">03</span>月 ：
-								登録住所は、荒川区西日暮里に移転しました。</span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
- 
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2015</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">02</span>月 ：
-								平成２６年度決算は完了して、売上額は２.３億（ITのみ）になりました</span><br><br>
- 
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2015</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">03</span>月 ：
-								取締役を4人追加して、取締役会を設置しました。</span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
- 
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2015</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">03</span>月 ：
-								資本金は、２５００万円に増資しました。</span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
- 
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2015</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">03</span>月 ：
-								平成２７年度の売上目標は、５億見込みます。</span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
- 
-								・<span style="font-family: ＭＳ Ｐ明朝" lang="EN-US">
-								2015</span><span style="font-family: ＭＳ Ｐ明朝">年<span lang="EN-US">07</span>月 ：
-								登記住所と営業拠点は『〒101-0032　東京都千代田区岩本町2-19-4　博朋ビル6階』に移転しました。</span><span style="FONT-FAMILY: 'ＭＳ Ｐ明朝'" lang="EN-US"><O:P></O:P></span><br><br>
+									2015年3月　三協株式会社設立
 								</td>
 							</tr>
 						</table>
@@ -311,8 +260,8 @@ a:active {
 			<tr>
 				<td width="212">&nbsp;</td>
 				<td>
-				<p align="center" style="line-height: 200%">みんなの夢、みんなの未来、みんなが一緒に創造しましょう。<br>
-		Copyright (c) 2011 Your Future Corporation, Inc. All Rights Reserved.</td>
+				<p align="center" style="line-height: 200%">日々成長し続け、お客様に求められているものを提供し続けていきます。<br>
+		Copyright (c) 2016 SAN KYOU Corporation, Inc. All Rights Reserved.</td>
 			</tr>
 		</table>
 		</td>
