--- a/akcs.html
+++ b/akcs.html
@@ -67,7 +67,7 @@ a:active {
 										<img border="0" src="Images/bg_007.gif" width="15" height="13"></td>
 										<td align="left" style="font-size: 10pt">
 										<span lang="JA" style="font-family: MS Mincho">
-										<span title="みんなの未来株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','みんなの未来株式会社')">
+										<span title="三協株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','三協株式会社')">
 										<font style="font-size: 9pt" color="#666666">お気に入り</font></span></td>
 										<td align="left" style="font-size: 10pt">
 										<p align="center">
@@ -132,7 +132,7 @@ a:active {
 	</tr>
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
-		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top">
+		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top" align="center">
 			<img src="./Images/company01.jpg" onmouseover="src='./Images/company01.jpg';" onmouseout="src='./Images/company01.jpg'" border="0" /></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
@@ -245,20 +245,15 @@ a:active {
 							<tr>
 								<td valign="top">
 								<p style="line-height: 200%; margin-left: 0mm; margin-right: 0mm; margin-top: 0mm; margin-bottom: 0pt" class="MsoNormal">
-								〒101-0032　東京都千代田区岩本町2-19-4　博朋ビル6階<br>
+								〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2階<br>
 								<br>
 								最寄駅：　<br>
-								・[都営新宿線]岩本町駅（A5出口より徒歩6分）<br>
-<script type='text/javascript' charset='UTF-8' src='http://map.yahooapis.jp/MapsService/embedmap/V2/?bbox=139.7655356837921%2C35.688947970297036%2C139.78422531620788%2C35.69720833729642&amp;cond=compress%3A08or62vev4s0rO08f55hsI%3Blabels%3A%E5%B2%A9%E6%9C%AC%E7%94%BA%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA%EF%BC%92%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%99%EF%BC%8D%EF%BC%94%3Bfit%3Atrue%3Btraffic%3Atrain%3Bwalkspd%3A5%3Bws%3A3%3Bptn%3Ase%2Cex%2Cal%2Chb%2Clb%2Csr%3Bs%3A0%3Bstart%3A1%3Btype%3A1%3Bdate%3A201507211734%3Bmode%3Arendering%3Blabel%3A%E7%A7%8B%E8%91%89%E5%8E%9F%E9%A7%85%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA%EF%BC%92%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%99%EF%BC%8D%EF%BC%94%3B&amp;zoom=17&amp;lat=35.6948335&amp;lon=139.7769525&amp;pluginid=nr&amp;z=18&amp;mode=map&amp;active=true&amp;layer=nr&amp;home=on&amp;hlat=35.694158218287114&amp;hlon=139.77894269908904&amp;pointer=off&amp;pan=off&amp;ei=utf8&amp;v=3&amp;datum=wgs&amp;width=480&amp;height=360&amp;device=pc&amp;isleft='></script><br>
-								・[JR総武快速線]馬喰町駅（出口2番より徒歩6分）<br>
-<script type='text/javascript' charset='UTF-8' src='http://map.yahooapis.jp/MapsService/embedmap/V2/?cond=compress%3A08or68b1d8b2dG083m84a%7C%3Blabels%3A%E9%A6%AC%E5%96%B0%E7%94%BA%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA%EF%BC%92%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%99%EF%BC%8D%EF%BC%94%3Bfit%3Atrue%3Btraffic%3Atrain%3Bwalkspd%3A5%3Bws%3A3%3Bptn%3Ase%2Cex%2Cal%2Chb%2Clb%2Csr%3Bs%3A0%3Bstart%3A1%3Btype%3A1%3Bdate%3A201507211734%3Bmode%3Alist%3Bdetail%3Asimple%3Bresults%3A6%3Blabel%3A%E7%A5%9E%E7%94%B0%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA%EF%BC%92%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%99%EF%BC%8D%EF%BC%94%3B&amp;zoom=18&amp;bbox=139.7702080918961%2C35.69125276844754%2C139.77955290810397%2C35.6953829395397&amp;lat=35.6938215&amp;lon=139.7806975&amp;pluginid=nr&amp;z=18&amp;mode=map&amp;active=true&amp;layer=nr&amp;home=on&amp;hlat=35.694139537958584&amp;hlon=139.77892187763214&amp;pointer=off&amp;pan=off&amp;ei=utf8&amp;v=3&amp;datum=wgs&amp;width=480&amp;height=360&amp;device=pc&amp;isleft='></script><br>
-								・[東京メトロ日比谷線]小伝馬町駅（2番出口より8分）<br>
-<script type='text/javascript' charset='UTF-8' src='http://map.yahooapis.jp/MapsService/embedmap/V2/?cond=compress%3A08or688t9o845C042ebdoN%3Blabels%3A%E5%B0%8F%E4%BC%9D%E9%A6%AC%E7%94%BA%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA2-19-4%3Bfit%3Atrue%3Btraffic%3Atrain%3Bwalkspd%3A5%3Bws%3A3%3Bptn%3Ase%2Cex%2Cal%2Chb%2Clb%2Csr%3Bs%3A0%3Bstart%3A1%3Btype%3A1%3Bdate%3A201507211734%3Bmode%3Arendering%3Blabel%3A%E7%A5%9E%E7%94%B0%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA%EF%BC%92%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%99%EF%BC%8D%EF%BC%94%3B&amp;zoom=17&amp;bbox=139.77037268379215%2C35.687454383984324%2C139.78906231620783%2C35.695714905664616&amp;lat=35.69221999999994&amp;lon=139.778788&amp;pluginid=nr&amp;z=17&amp;mode=map&amp;active=true&amp;layer=nr&amp;home=on&amp;hlat=35.69412824704544&amp;hlon=139.7789274748688&amp;pointer=off&amp;pan=off&amp;ei=utf8&amp;v=3&amp;datum=wgs&amp;width=480&amp;height=360&amp;device=pc&amp;isleft='></script><br>
-								・[JR山手線]秋葉原駅（昭和通り口より徒歩12分）<br>
-<script type='text/javascript' charset='UTF-8' src='http://map.yahooapis.jp/MapsService/embedmap/V2/?bbox=139.7655356837921%2C35.688947970297036%2C139.78422531620788%2C35.69720833729642&amp;cond=compress%3A08or62vq7t0rnG0cmva3qQ%3Blabels%3A%E7%A7%8B%E8%91%89%E5%8E%9F%E9%A7%85%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA%EF%BC%92%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%99%EF%BC%8D%EF%BC%94%3Bfit%3Atrue%3Btraffic%3Atrain%3Bwalkspd%3A5%3Bws%3A3%3Bptn%3Ase%2Cex%2Cal%2Chb%2Clb%2Csr%3Bs%3A0%3Bstart%3A1%3Btype%3A1%3Bdate%3A201507211734%3Bmode%3Arendering%3Blabel%3A%E7%A7%8B%E8%91%89%E5%8E%9F%E9%A7%85%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA%EF%BC%92%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%99%EF%BC%8D%EF%BC%94%3B&amp;zoom=17&amp;lat=35.69615314748191&amp;lon=139.77622859259034&amp;pluginid=nr&amp;z=17&amp;mode=map&amp;active=true&amp;layer=nr&amp;home=on&amp;hlat=35.694157815440704&amp;hlon=139.7789429881134&amp;pointer=off&amp;pan=off&amp;ei=utf8&amp;v=3&amp;datum=wgs&amp;width=480&amp;height=360&amp;device=pc&amp;isleft='></script><br>
-								・[JR山手線]神田駅（南口より徒歩15分）<br>
-<script type='text/javascript' charset='UTF-8' src='http://map.yahooapis.jp/MapsService/embedmap/V2/?bbox=139.76688377638249%2C35.69154376779464%2C139.78557340879817%2C35.699803865950976&amp;cond=compress%3A08or62v37205k-10tl30jV%3Blabels%3A%E7%A5%9E%E7%94%B0%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA%EF%BC%92%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%99%EF%BC%8D%EF%BC%94%3Bfit%3Atrue%3Btraffic%3Atrain%3Bwalkspd%3A5%3Bws%3A3%3Bptn%3Ase%2Cex%2Cal%2Chb%2Clb%2Csr%3Bs%3A0%3Bstart%3A1%3Btype%3A1%3Bdate%3A201507211734%3Bmode%3Alist%3Bdetail%3Asimple%3Bresults%3A6%3Blabel%3A%E7%A7%8B%E8%91%89%E5%8E%9F%E9%A7%85%E9%A7%85%2C%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%B2%A9%E6%9C%AC%E7%94%BA%EF%BC%92%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%99%EF%BC%8D%EF%BC%94%3B&amp;zoom=17&amp;lat=35.6935575&amp;lon=139.7748805&amp;pluginid=nr&amp;z=17&amp;mode=map&amp;active=true&amp;layer=nr&amp;home=on&amp;hlat=35.69408901654047&amp;hlon=139.77892527119448&amp;pointer=off&amp;pan=off&amp;ei=utf8&amp;v=3&amp;datum=wgs&amp;width=480&amp;height=360&amp;device=pc&amp;isleft='></script><br></p>
-								</td>
+								・[JR常磐線]北松戸駅（東出口より徒歩2分）<br>
+<DIV style="padding: 5px; border: 1px solid rgb(204, 204, 204); border-image: none; width: 655px;"><IFRAME 
+width="655" height="400" src="embed.htm" frameborder="0" 
+marginwidth="0" marginheight="0" scrolling="no"></IFRAME><BR><SMALL><A style="text-align: left; color: rgb(0, 0, 255);" 
+href="https://www.google.co.jp/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8F%B0%E6%9D%B1%E5%8C%BA%E4%B8%8A%E9%87%8E6-1-11&amp;aq=&amp;sll=35.70825,139.77555&amp;sspn=0.002579,0.00338&amp;brcurrent=3,0x60188ea239ae625f:0xbbd90fe8bdad5230,0&amp;ie=UTF8&amp;hq=&amp;hnear=%E3%80%92110-0005+%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8F%B0%E6%9D%B1%E5%8C%BA%E4%B8%8A%E9%87%8E%EF%BC%96%E4%B8%81%E7%9B%AE%EF%BC%91%E2%88%92%EF%BC%91%EF%BC%91&amp;ll=35.708407,139.77594&amp;spn=0.005157,0.006759&amp;t=m&amp;z=14&amp;iwloc=A">大きな地図で見る</A></SMALL> 
+</DIV>								</td>
 							</tr>
 						</table>
 						</td>
@@ -268,7 +263,7 @@ a:active {
 			</tr>
 		</table>
 		</td>
-		<td style="border-top: 1px solid #FFFFFF">&nbsp;</td>
+		<td style="border-top: 1px solid #FFFFFF"></td>
 	</tr>
 	<tr>
 		<td height="71">&nbsp;</td>
