--- a/grqb.html
+++ b/grqb.html
@@ -136,7 +136,7 @@ a:active {
 	</tr>
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
-		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top">
+		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top" align="center">
 			<img src="./Images/company01.jpg" onmouseover="src='./Images/company01.jpg';" onmouseout="src='./Images/company01.jpg'" border="0" /></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
@@ -249,7 +249,7 @@ a:active {
 							<tr>
 								<td valign="top">
 								<p style="line-height: 200%">
-								みんなの未来（以下「弊社」）は、個人情報を適正に取扱い、個人情報の保護を徹底することが社会的責務であると認識し、個人情報保護ポリシーを以下のように定めます。また、全社員がこの責務を認識し、個人情報の保護に取り組んで参ります。<br>
+								三協株式会社（以下「弊社」）は、個人情報を適正に取扱い、個人情報の保護を徹底することが社会的責務であると認識し、個人情報保護ポリシーを以下のように定めます。また、全社員がこの責務を認識し、個人情報の保護に取り組んで参ります。<br>
 								<br>
 								<b>■ 個人情報保護方針</b><br>
 								<br>
@@ -279,9 +279,9 @@ a:active {
 								<br>
 								<b>■ 連絡先</b><br>
 								三協株式会社<br>
-								〒101-0032　東京都千代田区岩本町2-19-4　博朋ビル6階<br>
-								TEL: 03-5829-9519<br>
-								FAX: 03-5829-9872</td>
+								〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2階<br>
+								TEL: 03-5378-6895<br>
+								FAX: 03-4502-3388</td>
 							</tr>
 						</table>
 						</td>
