--- a/shjs.html
+++ b/shjs.html
@@ -126,8 +126,7 @@ a:active {
 	</tr>
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
-		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top">
-		<object classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000" id="obj1" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" border="0" width="980" height="260">
+		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top" align="center">
 			<img src="./Images/company01.jpg" onmouseover="src='./Images/company01.jpg';" onmouseout="src='./Images/company01.jpg'" border="0" /></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
