--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ a:active {
 										<img border="0" src="Images/bg_007.gif" width="15" height="13"></td>
 										<td align="left">
 										<span lang="JA" style="font-family: MS Mincho">
-										<font style="font-size: 9pt" color="#666666"><span title="みんなの未来株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','みんなの未来株式会社')">お気に入り</font></span></td>
+										<font style="font-size: 9pt" color="#666666"><span title="三協株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.sanxie-inc.com','三協株式会社')">お気に入り</font></span></td>
 										<td align="left">
 										<p align="center">
 										<img border="0" src="Images/bg_005.gif" width="13" height="9"></td>
@@ -243,7 +243,7 @@ a:active {
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　商　　号</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
-									　三協株式会社（略称：SK）</td>
+									　三協株式会社（略称：SKI）</td>
 								</tr>
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
@@ -255,13 +255,13 @@ a:active {
 									　⇒住所移転予定：（2015年7月18日）<br>
 									　〒116-0013　東京都荒川区西日暮里1丁目3番3-1304号<O:P></O:P><br><br>
 -->
-									　〒271-0064　千葉県松戸市カ上本郷908-2 第三北松戸サンロードス2階<O:P></O:P></td>
+									　〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2階<O:P></O:P></td>
 								</tr>
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　取締役会</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
-									　代表者取締役：王綱<br>
+									　代表者取締役：権　紅桃<br>
 								</tr>
 <!--
 								<tr height="20">
@@ -276,13 +276,13 @@ a:active {
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
 									　ＴＥＬ</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
-									　０３－８８８８－８８８８</td>
+									　０３－５３７８－６８９５</td>
 								</tr>
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　ＦＡＸ</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
-									　０３－８８８８－８８８８</td>
+									　０３－４５０２－３３８８</td>
 								</tr>
 								<tr>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
