--- a/yg.html
+++ b/yg.html
@@ -128,7 +128,7 @@ a:active {
 	</tr>
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
-		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top">
+		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top" align="center">
 			<img src="./Images/company01.jpg" onmouseover="src='./Images/company01.jpg';" onmouseout="src='./Images/company01.jpg'" border="0" /></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
