--- a/akcs.html
+++ b/akcs.html
@@ -245,7 +245,7 @@ a:active {
 							<tr>
 								<td valign="top">
 								<p style="line-height: 200%; margin-left: 0mm; margin-right: 0mm; margin-top: 0mm; margin-bottom: 0pt" class="MsoNormal">
-								〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2階<br>
+								〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2F<br>
 								<br>
 								最寄駅：　<br>
 								・[JR常磐線]北松戸駅（東出口より徒歩2分）<br>
