--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@ a:active {
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
 									　ＴＥＬ</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
-									　０３－５３７８－６８９５</td>
+									　０４７－７０３－７８８０</td>
 								</tr>
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　ＦＡＸ</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
-									　０３－４５０２－３３８８</td>
+									　０４７－７０３－７８８０</td>
 								</tr>
 								<tr>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
@@ -300,7 +300,7 @@ a:active {
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
 									　<span lang="JA">取引銀行</span></td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
-									　三菱東京ＵＦＪ銀行　築地支店<br>
+									　三井住友銀行　松戸支店<br>
 									　みずほ銀行　　　　　銀座支店</td>
 								</tr>
 								<tr>
