--- a/jyln.html
+++ b/jyln.html
@@ -129,7 +129,7 @@ a:active {
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top" align="center">
-			<img src="./Images/company01.jpg" onmouseover="src='./Images/company01.jpg';" onmouseout="src='./Images/company01.jpg'" border="0" /></a>
+			<img src="./Images/company03.jpg" onmouseover="src='./Images/company03.jpg';" onmouseout="src='./Images/company03.jpg'" border="0" /></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 	</tr>
@@ -266,15 +266,15 @@ a:active {
 								<b><span lang="EN-US"><O:P><font face="Century">
 								&nbsp;</font></O:P></span></b></p>
 								<p style="line-height: 200%; margin-left: 0mm; margin-right: 0mm; margin-top: 0mm; margin-bottom: 0pt" class="MsoNormal">
-								<b><span style="font-family: ＭＳ 明朝">行動指針</span><span lang="EN-US"><O:P></O:P></span></b></p>
+								<b><span style="font-family: ＭＳ 明朝">社員の約束</span><span lang="EN-US"><O:P></O:P></span></b></p>
 								<p style="line-height: 200%; margin-left: 0mm; margin-right: 0mm; margin-top: 0mm; margin-bottom: 0pt" class="MsoNormal">
-								<span style="font-family: ＭＳ 明朝">１．顧客起点</span><span lang="EN-US"><font face="Century">
+								<span style="font-family: ＭＳ 明朝">１．個々の能力によって、プロジェクトを開拓出来るようになれば、会社とコラボレーションの形で共存する。</span><span lang="EN-US"><font face="Century">
 								</font></span></p>
 								<p style="line-height: 200%; margin-left: 0mm; margin-right: 0mm; margin-top: 0mm; margin-bottom: 0pt" class="MsoNormal">
-								<span style="font-family: ＭＳ 明朝">２．プロフェッショナル</span><span lang="EN-US"><font face="Century">
+								<span style="font-family: ＭＳ 明朝">２．現場管理などの能力が優れている社員には能力給を別途支給する。</span><span lang="EN-US"><font face="Century">
 								</font></span></p>
 								<p style="line-height: 200%; margin-left: 0mm; margin-right: 0mm; margin-top: 0mm; margin-bottom: 0pt" class="MsoNormal">
-								<span style="font-family: ＭＳ 明朝">３．個人価値と社会価値の実現</span></p>
+								<span style="font-family: ＭＳ 明朝">３．会社に対して人材紹介した場合、紹介料を支給する。</span></p>
 								<p style="line-height: 200%; margin-left: 0mm; margin-right: 0mm; margin-top: 0mm; margin-bottom: 0pt" class="MsoNormal">
 								<span style="font-family: ＭＳ 明朝">４．社会・環境との調和</span><span lang="EN-US"><font face="Century">
 								</font></span></td>
