--- a/grqb.html
+++ b/grqb.html
@@ -279,9 +279,9 @@ a:active {
 								<br>
 								<b>■ 連絡先</b><br>
 								三協株式会社<br>
-								〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2階<br>
-								TEL: 03-5378-6895<br>
-								FAX: 03-4502-3388</td>
+								〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2F<br>
+								TEL: 047-703-7880<br>
+								FAX: 047-703-7880</td>
 							</tr>
 						</table>
 						</td>
