--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ a:active {
 									　⇒住所移転予定：（2015年7月18日）<br>
 									　〒116-0013　東京都荒川区西日暮里1丁目3番3-1304号<O:P></O:P><br><br>
 -->
-									　〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2階<O:P></O:P></td>
+									　〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2F<O:P></O:P></td>
 								</tr>
 								<tr height="20">
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
@@ -301,14 +301,13 @@ a:active {
 									　<span lang="JA">取引銀行</span></td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
 									　三井住友銀行　松戸支店<br>
-									　みずほ銀行　　　　　銀座支店</td>
+									　</td>
 								</tr>
 								<tr>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　事業内容</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　・ソフトウェア請負開発及び販売業務<br>
-									　・IT関連技術者の派遣<br>
 									　・サイト構築・運用<br>
 									　・ネットワークシステム構築の受託<br>
 									　・通信販売事業<br>
