--- a/akcs.html
+++ b/akcs.html
@@ -67,7 +67,7 @@ a:active {
 										<img border="0" src="Images/bg_007.gif" width="15" height="13"></td>
 										<td align="left" style="font-size: 10pt">
 										<span lang="JA" style="font-family: MS Mincho">
-										<span title="三協株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.yourfuture.jp','三協株式会社')">
+										<span title="三協株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.sanxie-inc.jp','三協株式会社')">
 										<font style="font-size: 9pt" color="#666666">お気に入り</font></span></td>
 										<td align="left" style="font-size: 10pt">
 										<p align="center">
