--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ a:active {
 										<td align="left">
 										<span lang="JA" style="font-family: MS Mincho">
 										<font style="font-size: 9pt" color="#666666">
-										<a href="mailto:eigyou@yourfuture.jp">
+										<a href="mailto:sales@sanxie-inc.com">
 										<font color="#666666">お問い合わせ</font></a></font></span></td>
 									</tr>
 								</table>
