--- a/shjs.html
+++ b/shjs.html
@@ -75,7 +75,7 @@ a:active {
 										<td align="left" style="font-size: 10pt">
 										<span lang="JA" style="font-family: MS Mincho">
 										<font style="font-size: 9pt" color="#666666">
-										<a href="mailto:welcome@yourfuture.jp">
+										<a href="mailto:sales@sanxie-inc.com">
 										<font color="#666666">問い合わせ</font></a></font></span></td>
 									</tr>
 								</table>
