--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ a:active {
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
 									　<span lang="JA">取引銀行</span></td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0" bgcolor="#F0F2F4">
-									　三井住友銀行　松戸支店<br>
+									　みずほ銀行　松戸支店<br>
 									　</td>
 								</tr>
 								<tr>
