--- a/zpxx.html
+++ b/zpxx.html
@@ -278,7 +278,7 @@ a:active {
 								</tr>
 							</table>
 										<br><br>興味がある方は、弊社の<a href="doc/rireki-yfc.xls" >履歴書フォーマット</a>を記入して、<BR>
-										<a href="mailto:saiyo@yourfuture.jp">saiyo@sankyu.jp</a>に履歴書を送付してください。<BR>
+										<a href="mailto:saiyo@yourfuture.jp">zb@sanxie-inc.com</a>に履歴書を送付してください。<BR>
 						</div>
 						</td>
 					</tr><!--
