--- a/20161010_005.html
+++ b/20161010_005.html
@@ -5,8 +5,8 @@
 <title>20161010_005</title>
 </head> 
 <body>
-<p>
-<img src="./Images/travel/20161010/005.JPG" width="60%" height="90%"/>
+<p align="center">
+<img src="./Images/travel/20161010/005.jpg" width="60%" height="90%"/>
 </p>
 </body>
 </html>
