--- a/20161010_006.html
+++ b/20161010_006.html
@@ -5,8 +5,8 @@
 <title>20161010_006</title>
 </head> 
 <body>
-<p>
-<img src="./Images/travel/20161010/006.JPG" width="35%" height="95%"/>
+<p align="center">
+<img src="./Images/travel/20161010/006.jpg" width="35%" height="95%"/>
 </p>
 </body>
 </html>
