--- a/20161010_007.html
+++ b/20161010_007.html
@@ -5,8 +5,8 @@
 <title>20161010_007</title>
 </head> 
 <body>
-<p>
-<img src="./Images/travel/20161010/007.JPG" width="55%" height="90%"/>
+<p align="center">
+<img src="./Images/travel/20161010/007.jpg" width="55%" height="90%"/>
 </p>
 </body>
 </html>
