--- a/20161010_010.html
+++ b/20161010_010.html
@@ -5,8 +5,8 @@
 <title>20161010_010</title>
 </head> 
 <body>
-<p>
-<img src="./Images/travel/20161010/010.JPG" width="33%" height="92%"/>
+<p align="center">
+<img src="./Images/travel/20161010/010.jpg" width="33%" height="92%"/>
 </p>
 </body>
 </html>
