--- a/20161010_011.html
+++ b/20161010_011.html
@@ -5,8 +5,8 @@
 <title>20161010_011</title>
 </head> 
 <body>
-<p>
-<img src="./Images/travel/20161010/011.JPG" width="33%" height="93%"/>
+<p align="center">
+<img src="./Images/travel/20161010/011.jpg" width="33%" height="93%"/>
 </p>
 </body>
 </html>
