--- a/20161010_008.html
+++ b/20161010_008.html
@@ -5,8 +5,8 @@
 <title>20161010_008</title>
 </head> 
 <body>
-<p>
-<img src="./Images/travel/20161010/008.JPG" width="33%" height="95%"/>
+<p align="center">
+<img src="./Images/travel/20161010/008.jpg" width="33%" height="95%"/>
 </p>
 </body>
 </html>
