--- a/20161010_009.html
+++ b/20161010_009.html
@@ -5,8 +5,8 @@
 <title>20161010_009</title>
 </head> 
 <body>
-<p>
-<img src="./Images/travel/20161010/009.JPG" width="55%" height="90%"/>
+<p align="center">
+<img src="./Images/travel/20161010/009.jpg" width="55%" height="90%"/>
 </p>
 </body>
 </html>
