--- a/akcs.html
+++ b/akcs.html
@@ -125,6 +125,12 @@ a:active {
 				<td width="1">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
 				<td><a href="grqb.html"><img src="./Images/bg_008.jpg" onmouseover="src='./Images/bg_008_1.jpg';" onmouseout="src='./Images/bg_008.jpg'" border="0" /></a></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="zpxx.html"><img src="./Images/bg_023.jpg" onmouseover="src='./Images/bg_023_1.jpg';" onmouseout="src='./Images/bg_023.jpg'" border="0" /></a></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="travel.html"><img src="./Images/bg_024.jpg" onmouseover="src='./Images/bg_024_1.jpg';" onmouseout="src='./Images/bg_024.jpg'" border="0" /></a></td>
 			</tr>
 		</table>
 		</td>
@@ -249,11 +255,14 @@ a:active {
 								<br>
 								最寄駅：　<br>
 								・[JR常磐線]北松戸駅（東出口より徒歩2分）<br>
-<DIV style="padding: 5px; border: 1px solid rgb(204, 204, 204); border-image: none; width: 655px;"><IFRAME 
-width="655" height="400" src="embed.htm" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no"></IFRAME><BR><SMALL><A style="text-align: left; color: rgb(0, 0, 255);" 
-href="https://www.google.co.jp/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8F%B0%E6%9D%B1%E5%8C%BA%E4%B8%8A%E9%87%8E6-1-11&amp;aq=&amp;sll=35.70825,139.77555&amp;sspn=0.002579,0.00338&amp;brcurrent=3,0x60188ea239ae625f:0xbbd90fe8bdad5230,0&amp;ie=UTF8&amp;hq=&amp;hnear=%E3%80%92110-0005+%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8F%B0%E6%9D%B1%E5%8C%BA%E4%B8%8A%E9%87%8E%EF%BC%96%E4%B8%81%E7%9B%AE%EF%BC%91%E2%88%92%EF%BC%91%EF%BC%91&amp;ll=35.708407,139.77594&amp;spn=0.005157,0.006759&amp;t=m&amp;z=14&amp;iwloc=A">大きな地図で見る</A></SMALL> 
-</DIV>								</td>
+								<DIV style="padding: 1px; border: 1px solid rgb(204, 204, 204); border-image: none; width: 655px;">
+								<iframe
+								  width="655"
+								  height="400"
+								  frameborder="0" style="border:0"
+								  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAZ4QIx3kfpVuSKIXOlOaxjAt0cURkyzKo&q=〒271-0064 Chiba-ken, Matsudo-shi, Kamihongō, 第三北松戸サンロードス" allowfullscreen>
+								</iframe></DIV>
+								</td>
 							</tr>
 						</table>
 						</td>
