--- a/jyln.html
+++ b/jyln.html
@@ -121,6 +121,12 @@ a:active {
 				<td width="1">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
 				<td><a href="grqb.html"><img src="./Images/bg_008.jpg" onmouseover="src='./Images/bg_008_1.jpg';" onmouseout="src='./Images/bg_008.jpg'" border="0" /></a></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="zpxx.html"><img src="./Images/bg_023.jpg" onmouseover="src='./Images/bg_023_1.jpg';" onmouseout="src='./Images/bg_023.jpg'" border="0" /></a></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="travel.html"><img src="./Images/bg_024.jpg" onmouseover="src='./Images/bg_024_1.jpg';" onmouseout="src='./Images/bg_024.jpg'" border="0" /></a></td>
 			</tr>
 		</table>
 		</td>
