--- a/public_html/zpxx.-.html
+++ b/public_html/zpxx.-.html
@@ -180,7 +180,7 @@ a:active {
 					</tr>
 					<tr>
 						<td style="font-size: 10pt; border: 1px solid #D0D0D0" >
-						<a href="https://webmail.rentalserver.jp/" target="blank">
+						<a href="travel.html">
 						<img border="0" src="Images/bg_022_1.jpg" width="210" height="30"></a></td>
 					</tr>
 <!--
