--- a/travel.html
+++ b/travel.html
@@ -121,6 +121,12 @@ a:active {
 				<td width="1">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
 				<td><a href="grqb.html"><img src="./Images/bg_008.jpg" onmouseover="src='./Images/bg_008_1.jpg';" onmouseout="src='./Images/bg_008.jpg'" border="0" /></a></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="zpxx.html"><img src="./Images/bg_023.jpg" onmouseover="src='./Images/bg_023_1.jpg';" onmouseout="src='./Images/bg_023.jpg'" border="0" /></a></td>
+				<td width="2">
+				<td>
+				<img border="0" src="./Images/bg_002_1.jpg" width="130" height="28"></td>
 			</tr>
 		</table>
 		</td>
@@ -184,8 +190,8 @@ a:active {
 					</tr>
 					<tr>
 						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
-						<a href="test.html">
-						<img border="0" src="Images/bg_022_1.jpg" width="210" height="30"></a></td>
+						<a href="travel.html">
+						<img border="0" src="Images/bg_022.jpg" width="210" height="30"></a></td>
 					</tr>
 					</table>
 <!--
@@ -231,23 +237,30 @@ a:active {
 							<tr>
 								<td width="16">
 								<img border="0" src="./Images/bg_004.gif" width="16" height="16"></td>
-								<td>&nbsp;<b>社&nbsp; 員&nbsp; 旅&nbsp; 行</b></td>
+								<td><b>会社ニュース</b></td>
 							</tr>
 						</table>
 						</td>
 					</tr>
 					<tr>
 						<td valign="top" style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #B9C1CC; border-bottom-width: 1px">
-						<table border="0" width="100%" cellspacing="8" height="100%">
+						<table border="0" width="340" cellspacing="8" height="100%">
 							<tr>
-								<td valign="top">
-									<a href="travel_1.html" target="blank">
+								<td valign="top" width="25%">
+									<a href="travel_1.html" target="_blank">
 									<img border="0" src="./Images/travel/20161010/001.jpg" width="150" height="100">
+								</td>
+								<td valign="top" width="25%" align:left>
+									<a href="party_1.html" target="_blank">
+									<img border="0" src="./Images/party/2016party/001.jpg" width="150" height="100">
 								</td>
 							</tr>
 							<tr height="221">
 								<td valign="top">
-									<a href="travel_1.html" target="blank">鵜原理想郷_2016</a>
+									<a href="travel_1.html" target="blank">2016社員旅行_鵜原理想郷</a>
+								</td>
+								<td valign="top" align="center">
+									<a href="travel_1.html" target="blank">2016忘年会</a>
 								</td>
 							</tr>
 						</table>
