--- a/travel_1.html
+++ b/travel_1.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>写真_20161010 </title> 
+<title>2016社員旅行 </title> 
 <link rel="stylesheet" type="text/css" href="./css/travel.css">
 </head> 
 <body id=background-size background="./Images/travel/travel_006-1.jpg">
