--- a/zpxx.html
+++ b/zpxx.html
@@ -98,7 +98,8 @@ a:active {
 		<table border="0" width="100%" cellspacing="0" cellpadding="0" height="100%">
 			<tr>
 				<td>
-				<img border="0" src="./Images/bg_002_1.jpg" width="130" height="28"></td>
+				<a href="index.html">
+				<img src="./Images/bg_002.jpg" onmouseover="src='./Images/bg_002_1.jpg';" onmouseout="src='./Images/bg_002.jpg'" border="0" /></a></td>
 				<td width="2">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
 				<td><a href="shjs.html"><img src="./Images/bg_003.jpg" onmouseover="src='./Images/bg_003_1.jpg';" onmouseout="src='./Images/bg_003.jpg'" border="0" /></a></td>
@@ -117,6 +118,11 @@ a:active {
 				<td width="1">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
 				<td><a href="grqb.html"><img src="./Images/bg_008.jpg" onmouseover="src='./Images/bg_008_1.jpg';" onmouseout="src='./Images/bg_008.jpg'" border="0" /></a></td>
+				<td>
+				<img border="0" src="./Images/bg_023_1.jpg" width="130" height="28"></td>
+				<td width="2">
+				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
+				<td><a href="travel.html"><img src="./Images/bg_024.jpg" onmouseover="src='./Images/bg_024_1.jpg';" onmouseout="src='./Images/bg_024.jpg'" border="0" /></a></td>
 			</tr>
 		</table>
 		</td>
