--- a/travel_1.html
+++ b/travel_1.html
@@ -1,62 +1,52 @@
-<html> 
+<html>
 <head>
-<meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>2016社員旅行 </title> 
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>2016社員旅行</title>
 <link rel="stylesheet" type="text/css" href="./css/travel.css">
-</head> 
+</head>
 <body id=background-size background="./Images/travel/travel_006-1.jpg">
-<h1 style="top:130px; left:320px;position: absolute;"> 三協株式会社社員旅行2016 </h1>
-<DIV id=demo  style="OVERFLOW: hidden; WIDTH: 1150px; HEIGHT: 210px; top:225px; left:100px;position: absolute;">
-  <table border="0" cellspacing="0" cellpadding="0">
+<h1 style="top:60px; left:320px;position: absolute;"> 三協株式会社社員旅行2016 </h1>
+<p style="top:440px; left:370px;position: absolute;">人生は絵によく似ている、最初は空白、</p>
+<p style="top:465px; left:385px;position: absolute;">その後はスケッチ、最後はカラー。</p>
+<div id=demo  style="OVERFLOW: hidden; WIDTH: 1150px; HEIGHT: 300px; top:145px; left:100px;position: absolute;">
+  <table id="container" class="container" border="0" cellspacing="0" cellpadding="0">
      <tr>
         <td valign="top"  id=demo1>
            <!-- 要循环滚动的图片 -->
            <table width="600" border="0" align="center" cellpadding="0" cellspacing="0" >
               <tr>
-                 <td width="200" align="center" style="height: 151px">
-                     <a href="20161010_001.html" target="_blank">
-                    <img src="./Images/travel/20161010/001.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/001.jpg" alt=/>
                  </td>
-				<td align="center" style="height: 151px; width: 200px;">
-                     <a href="20161010_004.html" target="_blank">
-                    <img src="./Images/travel/20161010/004.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/004.jpg" alt=/>
                  </td>
-				 <td width="200" align="center" style="height: 151px">
-                     <a href="20161010_002.html" target="_blank">
-                    <img src="./Images/travel/20161010/002.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/002.jpg" alt=/>
                  </td>
-                 <td width="200" align="center" style="height: 151px">
-                     <a href="20161010_006.html" target="_blank">
-                    <img src="./Images/travel/20161010/006.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/006.jpg" alt=/>
                  </td>
-                 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="20161010_008.html" target="_blank">
-                    <img src="./Images/travel/20161010/008.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/008.jpg" alt=/>
                  </td>
-				 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="20161010_005.html" target="_blank">
-                    <img src="./Images/travel/20161010/005.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/005.jpg" alt=/>
                  </td>
-				 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="20161010_003.html" target="_blank">
-                    <img src="./Images/travel/20161010/003.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/003.jpg" alt=/>
                  </td>
-				 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="20161010_009.html" target="_blank">
-                    <img src="./Images/travel/20161010/009.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/009.jpg" alt=/>
                  </td>
-				 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="20161010_007.html" target="_blank">
-                    <img src="./Images/travel/20161010/007.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/007.jpg" alt=/>
                  </td>
-				 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="20161010_010.html" target="_blank">
-                    <img src="./Images/travel/20161010/010.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/010.jpg" alt=/>
                  </td>
-				 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="20161010_011.html" target="_blank">
-                    <img src="./Images/travel/20161010/011.jpg" /></a>
+                 <td>
+                    <img src="./Images/travel/20161010/011.jpg" alt=/>
                  </td>
               </tr>
            </table>
@@ -64,9 +54,30 @@
         <TD id=demo2 width=1></TD>
      </tr>
   </table>  
-</DIV> 
-<p style="top:440px; left:370px;position: absolute;">人生は絵によく似ている、最初は空白、</p>
-<p style="top:465px; left:385px;position: absolute;">その後はスケッチ、最後はカラー。</p>
+</div> 
+<div id="popup">
+    <div class="bg"><img src="" alt=""/></div>
+</div>
+<script type="text/javascript">
+    var imgs = document.getElementById("container").getElementsByTagName("img");
+    var lens = imgs.length;
+    var popup = document.getElementById("popup");
+
+    for(var i = 0; i < lens; i++){
+        imgs[i].onclick = function (event){
+            event = event||window.event;
+            var target = document.elementFromPoint(event.clientX, event.clientY);
+            showBig(target.src);
+        }
+    }
+    popup.onclick = function (){
+        popup.style.display = "none";
+    }
+    function showBig(src){
+        popup.getElementsByTagName("img")[0].src = src;
+        popup.style.display = "block";
+    }
+</script>
 <script type="text/javascript" src="./js/travel.js"></script>
 </body>
 </html>
