--- a/party_1.html
+++ b/party_1.html
@@ -5,33 +5,55 @@
 <title>2016忘年会 </title> 
 <link rel="stylesheet" type="text/css" href="./css/party.css">
 </head> 
-<body id=background-size background="./Images/party/party_001.jpg">
-<h1 style="top:510px; left:350px;position: absolute;"> 三協株式会社2016忘年会 </h1>
-<DIV>
-  <table border="0" cellspacing="0" cellpadding="0" style="top:320px; left:160px;position: absolute;">
+<body  id=background-size background="./Images/party/party_003.jpg">
+<h1 style="top:10px; left:350px;position: absolute;"> 三協株式会社2016忘年会 </h1>
+<h2 style="top:300px; left:770px;position: absolute;">自分の仕事を愛し、</h2>
+<h2 style="top:340px; left:770px;position: absolute;">それを大切に思うこと。</h2>
+<h2 style="top:380px; left:770px;position: absolute;">これ以上に楽しいことが</h2>
+<h2 style="top:420px; left:770px;position: absolute;">あるかしら...</h2>
+<div id="container" class="container" >
+  <table border="0" cellspacing="0" cellpadding="0" style="top:90px; left:100px;position: absolute;">
      <tr>
-        <td valign="top"  id=demo1>
-           <!-- 要循环滚动的图片 -->
+        <td valign="top">
            <table width="600" border="0" align="center" cellpadding="0" cellspacing="0" >
               <tr>
-                 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="2016party_001.html" target="_blank">
-                    <img src="./Images/party/2016party/001.jpg" /></a>
+                 <td align="center">
+                      <img src="./Images/party/2016party/001.jpg"  alt=/>
                  </td>
-                 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="2016party_002.html" target="_blank">
-                    <img src="./Images/party/2016party/002.jpg" /></a>
+                 <td align="center">
+                      <img src="./Images/party/2016party/002.jpg"  alt=/>
                  </td>
-                 <td align="center" style="height: 151px; width: 200px;">
-                     <a href="2016party_003.html" target="_blank">
-                    <img src="./Images/party/2016party/003.jpg" /></a>
+                 <td align="center">
+                      <img src="./Images/party/2016party/003.jpg"  alt=/>
                  </td>
               </tr>
            </table>
         </td>
      </tr>
   </table>  
-</DIV> 
-<script type="text/javascript" src="./js/party.js"></script>
+</div> 
+<div id="popup">
+    <div class="bg"><img src="" alt=""/></div>
+</div>
+<script type="text/javascript">
+    var imgs = document.getElementById("container").getElementsByTagName("img");
+    var lens = imgs.length;
+    var popup = document.getElementById("popup");
+
+    for(var i = 0; i < lens; i++){
+        imgs[i].onclick = function (event){
+            event = event||window.event;
+            var target = document.elementFromPoint(event.clientX, event.clientY);
+            showBig(target.src);
+        }
+    }
+    popup.onclick = function (){
+        popup.style.display = "none";
+    }
+    function showBig(src){
+        popup.getElementsByTagName("img")[0].src = src;
+        popup.style.display = "block";
+    }
+</script>
 </body>
 </html>
