--- a/travel.html
+++ b/travel.html
@@ -111,7 +111,7 @@ a:active {
 				<td width="2">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
 				<td>
-				<img border="0" src="./Images/bg_005.jpg" width="130" height="28"></td>
+				<td><a href="yg.html"><img src="./Images/bg_005.jpg" onmouseover="src='./Images/bg_005_1.jpg';" onmouseout="src='./Images/bg_005.jpg'" border="0" /></a></td>
 				<td width="2">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
 				<td><a href="akcs.html"><img src="./Images/bg_006.jpg" onmouseover="src='./Images/bg_006_1.jpg';" onmouseout="src='./Images/bg_006.jpg'" border="0" /></a></td><!--
@@ -126,7 +126,7 @@ a:active {
 				<td><a href="zpxx.html"><img src="./Images/bg_023.jpg" onmouseover="src='./Images/bg_023_1.jpg';" onmouseout="src='./Images/bg_023.jpg'" border="0" /></a></td>
 				<td width="2">
 				<td>
-				<img border="0" src="./Images/bg_002_1.jpg" width="130" height="28"></td>
+				<img border="0" src="./Images/bg_024_1.jpg" width="130" height="28"></td>
 			</tr>
 		</table>
 		</td>
