--- a/zpxx.html
+++ b/zpxx.html
@@ -310,7 +310,7 @@ a:active {
 				<!-- <td width="212" style="font-size: 10pt">&nbsp;</td> -->
 				<td style="font-size: 10pt">
 				<p align="center" style="line-height: 200%">日々成長し続け、お客様に求められているものを提供し続けていきます。<br>
-		Copyright (c) 2016 Your Future Corporation, Inc. All Rights Reserved.</td>
+		Copyright (c) 2016 SAN KYOU Corporation, Inc. All Rights Reserved.</td>
 			</tr>
 		</table>
 		</td>
