--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ a:active {
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
 									　取締役会</td>
 									<td style="font-size: 10pt; border: 1px solid #D0D0D0">
-									　代表者取締役：南　雲霏<br>
+									　代表取締役：南　雲霏<br>
 								</tr>
 <!--
 								<tr height="20">
